force-app/main/default/objects/CareServiceFlow__mdt/CareServiceFlow__mdt.object-meta.xml
<CustomObject>
    <label>CareServiceFlow</label>
    <pluralLabel>CareServicesFlow</pluralLabel>
</CustomObject>