force-app/main/default/objects/CareServiceFlow__mdt/fields/DaysInStatus__c.field-meta.xml
<CustomField>
    <fullName>DaysInStatus__c</fullName>
    <label>Days In Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>