force-app/main/default/objects/CareServiceFlow__mdt/fields/ForManagerOnly__c.field-meta.xml
<CustomField>
    <fullName>ForManagerOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Manager Only</label>
    <type>Checkbox</type>
</CustomField>