force-app/main/default/objects/CareServiceFlow__mdt/fields/Hot__c.field-meta.xml
<CustomField>
    <fullName>Hot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot</label>
    <type>Checkbox</type>
</CustomField>