force-app/main/default/objects/CareServiceFlow__mdt/fields/MessageToCA__c.field-meta.xml
<CustomField>
    <fullName>MessageToCA__c</fullName>
    <label>Message To CA</label>
    <type>TextArea</type>
</CustomField>