force-app/main/default/objects/CareServiceFlow__mdt/fields/MyRepairStatus__c.field-meta.xml
<CustomField>
    <fullName>MyRepairStatus__c</fullName>
    <label>My Repair Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>