force-app/main/default/objects/CareServiceFlow__mdt/fields/Remove_Hot_if_Closed__c.field-meta.xml
<CustomField>
    <fullName>Remove_Hot_if_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Hot if Closed</label>
    <type>Checkbox</type>
</CustomField>