force-app/main/default/objects/CareServiceFlow__mdt/fields/To_do__c.field-meta.xml
<CustomField>
    <fullName>To_do__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To do</label>
    <type>Checkbox</type>
</CustomField>